# douyin-collector

./: .gitignore  README.md  clean_read_files.py  clean_uncollected.py  main.py  pyproject.toml  test_cookie.py
config/: app.yaml  app.yaml.example  cookie.yaml.example
discuss/: douyin-collector-技术规范.md  架构重构方案-Windows端.md
docs/: API接口文档.md  CHANGELOG.md  cookie-anti-spam.md  取消收藏功能分析报告.md  数据字典.md
scripts/: install.bat  run.bat  run_clean_read_files.bat  run_clean_uncollected.bat
src/: __init__.py  collector.py  cookie_manager.py  dingtalk_notifier.py  models.py  playwright_adapter.py  read_files_cleaner.py  uncollected_cleaner.py  uploader.py  utils.py
